# betaflight-host

./: CMakeLists.txt  README.md  sdkconfig.defaults
boards/esp32s3-wroom-freenove/: board.h  partitions.csv  sdkconfig.defaults
boards/esp32s3-zero/: board.h  partitions.csv  sdkconfig.defaults
src/main/: CMakeLists.txt  bridge.c  bridge.h  http_status.c  http_status.h  idf_component.yml  leds.c  leds.h  main.c  ota.c  ota.h  tcp_server.c  tcp_server.h  usb_cdc_host.c  usb_cdc_host.h  vcp_ids.generated.h  wifi.c  wifi.h
tools/: gen_vcp_ids.py
