idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "tcp_server.c"
        "usb_cdc_host.c"
        "bridge.c"
        "http_status.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        usb
        lwip
        esp_http_server
)
